CMS fatal error: must own lock MemberNameTable_lock

XMLWordPrintable

    • b31
    • b35

        Failure observed during PIT of hs25-b31 for jdk8-b89
        #
        # A fatal error has been detected by the Java Runtime Environment:
        #
        # Internal Error (C:\jprt\T\P1\151437.amurillo\s\src\share\vm\runtime\mutexLocker.cpp:150), pid=4800, tid=8288
        # fatal error: must own lock MemberNameTable_lock
        #
        # JRE version: Java(TM) SE Runtime Environment (8.0-b87) (build 1.8.0-ea-fastdebug-b87)
        # Java VM: Java HotSpot(TM) Client VM (25.0-b31-internal-201305031514.amurillo.hs25-b31-snapshot-fastdebug compiled mode, sharing windows-x86 )
        # Failed to write core dump. Minidumps are not enabled by default on client versions of Windows
        #

              Assignee:
              Serguei Spitsyn
              Reporter:
              Pavel Punegov
              Votes:
              0 Vote for this issue
              Watchers:
              5 Start watching this issue

                Created:
                Updated:
                Resolved: