8013945: CMS fatal error: must own lock MemberNameTable_lock

The "delete mnt" needs to grab MemberNameTable_lock if !SafepointSynchronize::is_at_safepoint()

Reviewed-by: sla, mgerdin, dholmes, jmasa